Add missing localization for categories list editor header title

--- a/Vocable/Supporting Files/en.lproj/Localizable.strings
+++ b/Vocable/Supporting Files/en.lproj/Localizable.strings
@@ -119,3 +119,5 @@
 "phrase_editor.alert.cancel_editing_confirmation.button.discard.title" = "Discard";
 
 "phrase_editor.alert.cancel_editing_confirmation.button.continue_editing.title" = "Continue Editing";
+
+"categories_list_editor.header.title" = "Categories";
