--- a/Vocable/Supporting Files/de.lproj/Localizable.strings
+++ b/Vocable/Supporting Files/de.lproj/Localizable.strings
@@ -96,3 +96,4 @@
 /* Settings screen header title */
 "settings.header.title" = "Einstellungen";
 
+"categories_list_editor.header.title" = "Kategorien";
