--- a/Vocable/Supporting Files/de.lproj/Localizable.strings
+++ b/Vocable/Supporting Files/de.lproj/Localizable.strings
@@ -10,13 +10,13 @@
 /* Exit edit categories alert title */
 "category_editor.alert.cancel_editing_confirmation.title" = "Wenn Sie dies schließen, ohne Ihre benutzerdefinierte Kategorie zu speichern, wird gelöscht.";
 
-/* Delete category alert cancel button title */
+/* Cancel alert action title */
 "category_editor.alert.delete_category_confirmation.button.cancel.title" = "Abbrechen";
 
-/* Delete category alert action button title */
+/* Remove category alert action title */
 "category_editor.alert.delete_category_confirmation.button.remove.title" = "Entfernen";
 
-/* Delete category confirmation alert title */
+/* Remove category alert title */
 "category_editor.alert.delete_category_confirmation.title" = "Gelöschte Kategorien können nicht wiederhergestellt werden.";
 
 /* Delete phrase alert cancel button title */
@@ -59,6 +59,9 @@
 /* Select something below to speak Hint Text */
 "main_screen.textfield_placeholder.default" = "Wähle unten etwas aus, um zu sprechen";
 
+/* Add Phrases */
+"MISSING_LOCALIZATION_Add Phrases" = "MISSING_LOCALIZATION_Add Phrases";
+
 /* Page indicator progress format. \"Page x of n\" */
 "paging_progress_indicator_format" = "Seite %1$d von %2$d";
 
@@ -71,9 +74,7 @@
 /* Exit edit sayings alert title */
 "phrase_editor.alert.cancel_editing_confirmation.title" = "Nicht gespeicherte Veränderungen werden beim Verlassen des Menüs verworfen.";
 
-/* new entry saved to user favorites category
-   Saved to user favorites category
-   Saved to user favorites category toast title */
+/* Saved to user favorites category toast title */
 "phrase_editor.toast.successfully_saved_to_favorites.title_format" = "In %@ gespeichert";
 
 /* 'No' num pad response */
