review changes - naming things, moved where to save, etc.

--- a/Vocable/Supporting Files/en.lproj/Localizable.strings
+++ b/Vocable/Supporting Files/en.lproj/Localizable.strings
@@ -138,7 +138,7 @@
 
 "recents_empty_state.header.title" = "No recently used phrases";
 
-"recents_empty_state.body.title" = "Start using your app to see your most recently used phrases here.";
+"recents_empty_state.body.title" = "Start using Vocable to see your most recently used phrases here.";
 
 "empty_state.header.title" = "This category has no phrases yet";
 
