--- a/CrowdinExport/en.xliff
+++ b/CrowdinExport/en.xliff
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 http://docs.oasis-open.org/xliff/v1.2/os/xliff-core-1.2-strict.xsd">
+<xliff xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 http://docs.oasis-open.org/xliff/v1.2/os/xliff-core-1.2-strict.xsd">
   <file original="Vocable/Supporting Files/en.lproj/InfoPlist.strings" source-language="en" target-language="en" datatype="plaintext">
     <header>
       <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.3" build-num="13E113"/>
@@ -144,7 +144,7 @@
         <note>Empty state Add Phrase button title</note>
       </trans-unit>
       <trans-unit id="empty_state.header.title" xml:space="preserve">
-        <source>This category has no phrases yet</source>
+        <source>You don't have any phrases saved yet.</source>
         <target>This category has no phrases yet</target>
         <note>Empty state title</note>
       </trans-unit>
