#541 | Adding in hint label

--- a/Vocable/Supporting Files/en.lproj/Localizable.strings
+++ b/Vocable/Supporting Files/en.lproj/Localizable.strings
@@ -181,3 +181,11 @@
 "settings.alert.reset_app_settings_failure.body" = "Vocable failed to reset. Please try again or reinstall Vocable if the issue persists.";
 
 "settings.alert.reset_app_settings_failure.button.ok" = "OK";
+
+/* Listening mode feedback */
+
+"listening_mode.feedback.submit.title" = "Share to Developers";
+
+"listening_mode.feedback.hint.text" = " Anonymously sharing this question will help us improve listening mode.";
+
+"listening_mode.feedback.confirmation.title" = "Thank You!";
